src/test/ui/error-codes/E0435.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/E0435.rs:13:17
   |
13 |     let _: [u8; foo]; //~ ERROR E0435
   |                 ^^^ non-constant value

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0435"
